@@ -9,21 +9,13 @@ import javafx.scene.control.ComboBox;
 import javafx.scene.control.Control;
 import javafx.scene.control.DatePicker;
 import javafx.scene.control.TextField;
+
 import java.time.LocalDate;
 
-/**
- * Clase con métodos estáticos para validaciones reutilizables
- * usando ControlsFX Validator con patrón similar a ejemplo proporcionado
- */
 public class ValidadorForms {
 
-    // ============================================
-    // VALIDADORES PARA USUARIOS
-    // ============================================
+    // USUARIOS
 
-    /**
-     * Validador: Nombre obligatorio, 3-50 caracteres
-     */
     public static ValidationSupport validarNombreUsuario(TextField txtNombre) {
         ValidationSupport vs = new ValidationSupport();
         vs.setErrorDecorationEnabled(true);
@@ -40,31 +32,29 @@ public class ValidadorForms {
         return vs;
     }
 
-    /**
-     * Validador: Email con formato básico
-     */
     public static ValidationSupport validarEmailUsuario(TextField txtEmail) {
         ValidationSupport vs = new ValidationSupport();
         vs.setErrorDecorationEnabled(true);
 
-        vs.registerValidator(txtEmail, false,
-                Validator.createRegexValidator(
-                        "El formato del email debe ser: texto@texto.texto",
-                        "^(.+)@(.+)\\.(.+)$",
-                        Severity.ERROR));
+        vs.registerValidator(txtEmail, (Control c, String texto) -> {
+            if (texto == null || texto.trim().isEmpty()) {
+                return ValidationResult.fromError(c, "El email es obligatorio");
+            } else if (!texto.matches("^(.+)@(.+)\\.(.+)$")) {
+                return ValidationResult.fromError(c, "El formato del email debe ser: texto@texto.texto");
+            } else {
+                return ValidationResult.fromInfo(c, "Email válido");
+            }
+        });
         return vs;
     }
 
-    /**
-     * Validador: Teléfono (vacío o 9 dígitos)
-     */
     public static ValidationSupport validarTelefonoUsuario(TextField txtTelefono) {
         ValidationSupport vs = new ValidationSupport();
         vs.setErrorDecorationEnabled(true);
 
         vs.registerValidator(txtTelefono, (Control c, String t) -> {
-            if (t == null || t.isBlank()) {
-                return ValidationResult.fromInfo(c, "Teléfono opcional");
+            if (t == null || t.trim().isEmpty()) {
+                return ValidationResult.fromError(c, "El teléfono es obligatorio");
             } else if (!t.matches("\\d{9}")) {
                 return ValidationResult.fromError(c, "El teléfono debe tener 9 dígitos numéricos");
             } else {
@@ -74,9 +64,6 @@ public class ValidadorForms {
         return vs;
     }
 
-    /**
-     * Validador: Campo obligatorio genérico
-     */
     public static ValidationSupport validarCampoObligatorio(TextField txtField, String nombreCampo) {
         ValidationSupport vs = new ValidationSupport();
         vs.setErrorDecorationEnabled(true);
@@ -91,13 +78,8 @@ public class ValidadorForms {
         return vs;
     }
 
-    // ============================================
-    // VALIDADORES PARA MASCOTAS
-    // ============================================
+    // MASCOTAS
 
-    /**
-     * Validador: Peso (número positivo)
-     */
     public static ValidationSupport validarPesoMascota(TextField txtPeso) {
         ValidationSupport vs = new ValidationSupport();
         vs.setErrorDecorationEnabled(true);
@@ -113,15 +95,12 @@ public class ValidadorForms {
                 }
                 return ValidationResult.fromInfo(c, "Peso válido");
             } catch (NumberFormatException e) {
-                return ValidationResult.fromError(c, "El peso debe ser un número (use . como separador)");
+                return ValidationResult.fromError(c, "El peso debe ser un número (usa . como separador)");
             }
         });
         return vs;
     }
 
-    /**
-     * Validador: Especie (obligatorio)
-     */
     public static ValidationSupport validarEspecieMascota(TextField txtEspecie) {
         ValidationSupport vs = new ValidationSupport();
         vs.setErrorDecorationEnabled(true);
@@ -136,9 +115,6 @@ public class ValidadorForms {
         return vs;
     }
 
-    /**
-     * Validador: Raza (obligatorio)
-     */
     public static ValidationSupport validarRazaMascota(TextField txtRaza) {
         ValidationSupport vs = new ValidationSupport();
         vs.setErrorDecorationEnabled(true);
@@ -153,9 +129,6 @@ public class ValidadorForms {
         return vs;
     }
 
-    /**
-     * Validador: Estado de salud (obligatorio)
-     */
     public static ValidationSupport validarEstadoSaludMascota(TextField txtEstado) {
         ValidationSupport vs = new ValidationSupport();
         vs.setErrorDecorationEnabled(true);
@@ -170,13 +143,8 @@ public class ValidadorForms {
         return vs;
     }
 
-    // ============================================
-    // VALIDADORES PARA ADOPCIONES
-    // ============================================
+    // ---------- ADOPCIONES ----------
 
-    /**
-     * Validador: Estado de adopción (obligatorio)
-     */
     public static ValidationSupport validarEstadoAdopcion(TextField txtEstado) {
         ValidationSupport vs = new ValidationSupport();
         vs.setErrorDecorationEnabled(true);
@@ -191,9 +159,6 @@ public class ValidadorForms {
         return vs;
     }
 
-    /**
-     * Validador: Calificación (1-5 o vacío)
-     */
     public static ValidationSupport validarCalificacionAdopcion(TextField txtCalif) {
         ValidationSupport vs = new ValidationSupport();
         vs.setErrorDecorationEnabled(true);
@@ -216,7 +181,7 @@ public class ValidadorForms {
     }
 
     /**
-     * Validador: Rango de fechas (fecha fin >= fecha inicio)
+     * Valida que la fecha fin sea mayor o igual que la fecha de inicio.
      */
     public static ValidationSupport validarRangoFechasAdopcion(DatePicker dpInicio, DatePicker dpFin) {
         ValidationSupport vs = new ValidationSupport();
@@ -236,7 +201,7 @@ public class ValidadorForms {
     }
 
     /**
-     * Validador: ComboBox no vacío
+     * Valida que el ComboBox tenga un valor seleccionado.
      */
     public static ValidationSupport validarComboBoxObligatorio(ComboBox<?> combo, String nombreCampo) {
         ValidationSupport vs = new ValidationSupport();
@@ -252,14 +217,14 @@ public class ValidadorForms {
     }
 
     /**
-     * Validador: CheckBox aceptado
+     * Valida que el CheckBox esté marcado (aceptado).
      */
     public static ValidationSupport validarCheckBoxAceptado(CheckBox check, String nombreCampo) {
         ValidationSupport vs = new ValidationSupport();
         vs.setErrorDecorationEnabled(true);
 
         vs.registerValidator(check, true, (Control c, Boolean v) -> {
-            if (!v) {
+            if (Boolean.FALSE.equals(v)) {
                 return ValidationResult.fromWarning(c, "Debes aceptar " + nombreCampo);
             } else {
                 return ValidationResult.fromInfo(c, nombreCampo + " aceptado");
